--- a/BlogHealth/Views/Home/Index.cshtml
+++ b/BlogHealth/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@using BlogHealth.Models
+@model List<PostCate>
 @{
     ViewBag.Title = "Trang chủ";
 }
@@ -8,7 +9,7 @@
     </style>
 }
 
-    <div class="col-xl-3 hidden-sm-down MainContent pr-0 pl-1" id="">
+    <div class="col-xl-3 px-1 hidden-sm-down MainContent " id="">
         @*<h4 class="text-success section-heading h4">Bài viết nổi bật</h4>*@
         <div class="row">
             <div class="col-xl-12 mb-1 ">   
@@ -23,7 +24,7 @@
 
                 </ul>
                 <!-- Tab panels -->
-                <div class="tab-content card px-1">
+                <div class="tab-content card px-1 rounded-top">
                     <!--Panel 1-->
                     <div class="tab-pane fade in show active" id="panelHot" role="tabpanel">
                         <section class="section extra-margins pb-3 text-center text-lg-left">
@@ -291,75 +292,69 @@
         </ul>
         <div class="tab-content px-1">
             <!--Panel 1-->
-            <div class="tab-pane fade in show active white" id="panelPosts" role="tabpanel">
+            <div class="tab-pane fade in show active " id="panelPosts" role="tabpanel">
                 <div class="row">
-                    <div class="col-xl-6">
+                    <div class="col-xl-6 col-md-6 ">
 
                         <section class="section extra-margins text-center pb-3">
 
                             <!--Grid row-->
                             <div class="row">
+                                    @{ 
+                                        List<PostCate> Posts1 = Model.Take(Model.Count / 2).ToList();
+                                        List<PostCate> Posts2 = Model.Skip(Model.Count / 2).Take(Model.Count / 2).ToList();
+                                    }
+                                    @foreach (var item in Posts1)
+                                    {
+                                        <div class="col-lg-12 col-md-12 white mb-2 mr-1 p-0 hm-white-slight z-depth-1-half overlay rounded">
+                                            <!--Featured image-->
+                                            <div class="view mb-2 rounded-top">
+                                                <img src="~/HinhAnh/BaiViet/images/Thumbs/@(item.Slug)_large.jpg" class="img-fluid" alt="First sample image">
+                                                <a>
+                                                    <div class="mask"></div>
+                                                </a>
+                                            </div>
+                                            <div class="p-1">
+                                                <!--Excerpt-->
+                                                <h4 class="mb-1">@item.Title</h4>
+                                                @*<a href="" class="pink-text"><h6 class="my-1"><i class="fa fa-map "></i><strong> Adventure</strong></h6></a>*@
+                                                <span class="text-muted @item.CateColor"><strong>@item.CateName</strong></span>
+                                                <div class=" text-center">
+                                                    @if (item.Update != null)
+                                                    {
+                                                        <small class="text-muted ml-2"><i class="fa fa-clock-o"></i>@item.Update.Value.ToString("dd/MM/yyyy, hh:mm")</small>
+                                                    }
+                                                    else
+                                                    {
+                                                        <small class="text-muted ml-2"><i class="fa fa-clock-o"></i>@item.CreateDate.Value.ToString("dd/MM/yyyy, hh:mm")</small>
+                                                    }
+                                                    @*<small class="text-muted ml-2"><i class="fa fa-clock-o"></i>@(item.CreateDate.HasValue==false?item.Update:item.CreateDate)</small>*@
+                                                    @*<span class="text-muted ml-3"><i class="fa fa-comment-o"></i>100</span>
+                                                        <span class="text-muted ml-2"><i class="fa fa-eye" aria-hidden="true"></i>100</span>
+                                                        <span class="text-muted ml-2"><i class="fa fa-star" aria-hidden="true"></i>4</span>*@
+                                                </div>
 
-                                <!--Grid column-->
-                                <div class="col-lg-12 col-md-12 mb-2 mr-1 p-0 hm-white-slight z-depth-1-half overlay rounded">
-                                    <!--Featured image-->
-                                    <div class="view mb-2 rounded-top">
-                                        <img src="~/Images/3-35-324x235.png" class="img-fluid" alt="First sample image">
-                                        <a>
-                                            <div class="mask"></div>
-                                        </a>
-                                    </div>
-                                    <div class="p-1">
-                                        <!--Excerpt-->
-                                        <a href="" class="pink-text"><h6 class="mb-3 mt-3"><i class="fa fa-map "></i><strong> Adventure</strong></h6></a>
-                                        <h4 class="mb-3">This is title of the news</h4>
-                                        <p>by <a><strong>Billy Forester</strong></a>, 15/07/2016</p>
-                                        <p>Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus voluptas.</p>
-                                        <a class="btn btn-pink btn-rounded">Read more</a>
-                                    </div>
+                                                <p>@item.ShortContent</p>
+                                                <div class="card-footer d-flex w-100 justify-content-between px-1 py-1">
+                                                    <span>
+                                                        <small class="text-muted mr-1"><i class="fa fa-thumbs-o-up"></i>100</small>
+                                                        <small class="text-muted mr-1"><i class="fa fa-share-alt"></i>100</small>
+                                                        <small class="text-muted mr-1"><i class="fa fa-eye"></i>100</small>
+                                                        <small class="text-muted "><i class="fa fa-comment-o"></i>100</small>
+                                                    </span>
+                                                    <span>
+                                                        <a class="btn btn-pink btn-rounded btn-sm m-0">Đọc ngay</a>
+                                                    </span>
 
-                                </div>
-                                <!--Grid column-->
-                                <!--Grid column-->
-                                <div class="col-lg-12 col-md-12 mb-2 mr-1 p-0 hm-white-slight z-depth-1-half rounded">
-                                    <!--Featured image-->
-                                    <div class="view  mb-2 rounded-top">
-                                        <img src="https://mdbootstrap.com/img/Photos/Others/img%20(33).jpg" class="img-fluid" alt="Second sample image">
-                                        <a>
-                                            <div class="mask"></div>
-                                        </a>
-                                    </div>
-                                    <div class="p-1">
-                                        <!--Excerpt-->
-                                        <a href="" class="deep-orange-text"><h6 class="mb-3 mt-3"><i class="fa fa-graduation-cap"></i><strong> Education</strong></h6></a>
-                                        <h4 class="mb-3">This is title of the news</h4>
-                                        <p>by <a><strong>Billy Forester</strong></a>, 12/07/2016</p>
-                                        <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores.</p>
-                                        <a class="btn btn-deep-orange btn-rounded">Read more</a>
-                                    </div>
 
-                                </div>
-                                <!--Grid column-->
-                                <!--Grid column-->
-                                <div class="col-lg-12 col-md-12 mb-2 mr-1 p-0 hm-white-slight z-depth-1-half overlay rounded">
-                                    <!--Featured image-->
-                                    <div class="view mb-2 rounded-top">
-                                        <img src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20(33).jpg" class="img-fluid" alt="Thrid sample image">
-                                        <a>
-                                            <div class="mask"></div>
-                                        </a>
-                                    </div>
-                                    <div class="p-1">
-                                        <!--Excerpt-->
-                                        <a href="" class="cyan-text"><h6 class="mb-3 mt-3"><i class="fa fa-fire "></i><strong> Culture</strong></h6></a>
-                                        <h4 class="mb-3">This is title of the news</h4>
-                                        <p>by <a><strong>Billy Forester</strong></a>, 10/07/2016</p>
-                                        <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, quia consequuntur magni dolores eos qui ratione voluptatem.</p>
-                                        <a class="btn btn-info btn-rounded">Read more</a>
-                                    </div>
+                                                </div>
+                                            </div>
 
-                                </div>
-                                <!--Grid column-->
+                                        </div>
+                                    }
+                                
+                                
+                               
 
                             </div>
                             <!--Grid row-->
@@ -369,75 +364,63 @@
 
 
                     </div>
-                    <div class="col-xl-6">
+                    <div class="col-xl-6 col-md-6 ">
                         <section class="section extra-margins text-center pb-3">
 
-                            <!--Grid row-->
                             <div class="row">
+                               
+                                    @foreach (var item in Posts2)
+                                    {
+                                        <div class="col-lg-12 col-md-12 white mb-2 ml-1 p-0 hm-white-slight z-depth-1-half overlay rounded">
+                                            <!--Featured image-->
+                                            <div class="view mb-2 rounded-top">
+                                                <img src="~/HinhAnh/BaiViet/images/Thumbs/@(item.Slug)_large.jpg" class="img-fluid" alt="First sample image">
+                                                <a>
+                                                    <div class="mask"></div>
+                                                </a>
+                                            </div>
+                                            <div class="p-1">
+                                                <!--Excerpt-->
+                                                <h4 class="mb-1">@item.Title</h4>
+                                                @*<a href="" class="pink-text"><h6 class="my-1"><i class="fa fa-map "></i><strong> Adventure</strong></h6></a>*@
+                                                <span class="text-muted @item.CateColor"><strong>@item.CateName</strong></span>
+                                                <div class=" text-center">
+                                                    @if (item.Update != null)
+                                                    {
+                                                        <small class="text-muted ml-2"><i class="fa fa-clock-o"></i>@item.Update.Value.ToString("dd/MM/yyyy, hh:mm")</small>
+                                                    }
+                                                    else
+                                                    {
+                                                        <small class="text-muted ml-2"><i class="fa fa-clock-o"></i>@item.CreateDate.Value.ToString("dd/MM/yyyy, hh:mm")</small>
+                                                    }
+                                                    @*<span class="text-muted ml-3"><i class="fa fa-comment-o"></i>100</span>
+                                <span class="text-muted ml-2"><i class="fa fa-eye" aria-hidden="true"></i>100</span>
+                                <span class="text-muted ml-2"><i class="fa fa-star" aria-hidden="true"></i>4</span>*@
+                                                </div>
 
-                                <!--Grid column-->
-                                <div class="col-lg-12 col-md-12 mb-2 ml-1 p-0 hm-white-slight z-depth-1-half overlay rounded">
-                                    <!--Featured image-->
-                                    <div class="view mb-2 rounded-top">
-                                        <img src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20(131).jpg" class="img-fluid" alt="First sample image">
-                                        <a>
-                                            <div class="mask"></div>
-                                        </a>
-                                    </div>
-                                    <div class="p-1">
-                                        <!--Excerpt-->
-                                        <a href="" class="pink-text"><h6 class="mb-3 mt-3"><i class="fa fa-map "></i><strong> Adventure</strong></h6></a>
-                                        <h4 class="mb-3">This is title of the news</h4>
-                                        <p>by <a><strong>Billy Forester</strong></a>, 15/07/2016</p>
-                                        <p>Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus voluptas.</p>
-                                        <a class="btn btn-pink btn-rounded">Read more</a>
-                                    </div>
+                                                <p>@item.ShortContent</p>
+                                                <div class="card-footer d-flex w-100 justify-content-between px-1 py-1">
+                                                    <span>
+                                                        <small class="text-muted mr-1"><i class="fa fa-thumbs-o-up"></i>100</small>
+                                                        <small class="text-muted mr-1"><i class="fa fa-share-alt"></i>100</small>
+                                                        <small class="text-muted mr-1"><i class="fa fa-eye"></i>100</small>
+                                                        <small class="text-muted "><i class="fa fa-comment-o"></i>100</small>
+                                                    </span>
+                                                    <span>
+                                                        <a class="btn btn-pink btn-rounded btn-sm m-0">Đọc ngay</a>
+                                                    </span>
 
-                                </div>
-                                <!--Grid column-->
-                                <!--Grid column-->
-                                <div class="col-lg-12 col-md-12 mb-2 ml-1 p-0 hm-white-slight z-depth-1-half rounded">
-                                    <!--Featured image-->
-                                    <div class="view  mb-2 rounded-top">
-                                        <img src="https://mdbootstrap.com/img/Photos/Others/img%20(33).jpg" class="img-fluid" alt="Second sample image">
-                                        <a>
-                                            <div class="mask"></div>
-                                        </a>
-                                    </div>
-                                    <div class="p-1">
-                                        <!--Excerpt-->
-                                        <a href="" class="deep-orange-text"><h6 class="mb-3 mt-3"><i class="fa fa-graduation-cap"></i><strong> Education</strong></h6></a>
-                                        <h4 class="mb-3">This is title of the news</h4>
-                                        <p>by <a><strong>Billy Forester</strong></a>, 12/07/2016</p>
-                                        <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores.</p>
-                                        <a class="btn btn-deep-orange btn-rounded">Read more</a>
-                                    </div>
 
-                                </div>
-                                <!--Grid column-->
-                                <!--Grid column-->
-                                <div class="col-lg-12 col-md-12 mb-2 ml-1 p-0 hm-white-slight z-depth-1-half overlay rounded">
-                                    <!--Featured image-->
-                                    <div class="view mb-2 rounded-top">
-                                        <img src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20(33).jpg" class="img-fluid" alt="Thrid sample image">
-                                        <a>
-                                            <div class="mask"></div>
-                                        </a>
-                                    </div>
-                                    <div class="p-1">
-                                        <!--Excerpt-->
-                                        <a href="" class="cyan-text"><h6 class="mb-3 mt-3"><i class="fa fa-fire "></i><strong> Culture</strong></h6></a>
-                                        <h4 class="mb-3">This is title of the news</h4>
-                                        <p>by <a><strong>Billy Forester</strong></a>, 10/07/2016</p>
-                                        <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, quia consequuntur magni dolores eos qui ratione voluptatem.</p>
-                                        <a class="btn btn-info btn-rounded">Read more</a>
-                                    </div>
+                                                </div>
+                                            </div>
 
-                                </div>
-                                <!--Grid column-->
+                                        </div>
+                                    }
+                                
+
+
 
                             </div>
-                            <!--Grid row-->
 
                         </section>
                     </div>
