--- a/BlogHealth/Views/Shared/_Layout.cshtml
+++ b/BlogHealth/Views/Shared/_Layout.cshtml
@@ -93,7 +93,7 @@
 
                 </div>
                 <div class="col-md-9">
-                <a class="float-right" href="http://member.civi.vn/cpc/?sid=25224&bid=10033920" target="_blank"><img src="http://member.civi.vn/imp/b/?sid=25224&bid=10033920" /></a>
+                    <a href="http://member.civi.vn/cpc/?sid=25224&bid=10010913" target="_blank"><img src="http://member.civi.vn/imp/b/?sid=25224&bid=10010913" /></a>
 
                 </div>
             </div>
