--- a/BlogHealth/Views/Deal/Index.cshtml
+++ b/BlogHealth/Views/Deal/Index.cshtml
@@ -5,6 +5,182 @@
 }
 
 <div class="col-md-9">
+    <section class="section widget-content mt-5">
+
+        <!--/ Card -->
+        <div class="card card-body pb-0">
+            <div class="single-post">
+
+                <p class="font-bold dark-grey-text text-center spacing grey lighten-4 py-2 mb-4">
+                    <strong>POPULAR POSTS</strong>
+                </p>
+
+                <!-- Grid row -->
+                <div class="row mb-4">
+                    <div class="col-5">
+
+                        <!-- Image -->
+                        <div class="view overlay hm-white-slight">
+                            <img src="https://mdbootstrap.com/img/Photos/Others/photo13.jpg" class="img-fluid z-depth-1" alt="sample image">
+                            <a>
+                                <div class="mask waves-light waves-effect waves-light"></div>
+                            </a>
+                        </div>
+                    </div>
+
+                    <!-- Excerpt -->
+                    <div class="col-7">
+                        <h6 class="mt-0 font-small">
+                            <a>
+                                <strong>Title of the news</strong>
+                            </a>
+                        </h6>
+
+                        <div class="post-data">
+                            <p class="font-small grey-text mb-0">
+                                <i class="fa fa-clock-o"></i> 18/08/2017
+                            </p>
+                        </div>
+                    </div>
+                    <!--/ Excerpt -->
+                </div>
+                <!--/ Grid row -->
+            </div>
+
+            <div class="single-post">
+                <!-- Grid row -->
+                <div class="row mb-4">
+                    <div class="col-5">
+
+                        <!-- Image -->
+                        <div class="view overlay hm-white-slight">
+                            <img src="https://mdbootstrap.com/img/Photos/Others/photo12.jpg" class="img-fluid z-depth-1" alt="sample image">
+                            <a>
+                                <div class="mask waves-light waves-effect waves-light"></div>
+                            </a>
+                        </div>
+                    </div>
+
+                    <!-- Excerpt -->
+                    <div class="col-7">
+                        <h6 class="mt-0 font-small">
+                            <a>
+                                <strong>Title of the news</strong>
+                            </a>
+                        </h6>
+
+                        <div class="post-data">
+                            <p class="font-small grey-text mb-0">
+                                <i class="fa fa-clock-o"></i> 18/08/2017
+                            </p>
+                        </div>
+                    </div>
+                    <!--/ Excerpt -->
+                </div>
+                <!--/ Grid row -->
+            </div>
+
+            <div class="single-post">
+                <!-- Grid row -->
+                <div class="row mb-4">
+                    <div class="col-5">
+
+                        <!-- Image -->
+                        <div class="view overlay hm-white-slight">
+                            <img src="https://mdbootstrap.com/img/Photos/Others/photo10.jpg" class="img-fluid z-depth-1" alt="sample image">
+                            <a>
+                                <div class="mask waves-light waves-effect waves-light"></div>
+                            </a>
+                        </div>
+                    </div>
+
+                    <!-- Excerpt -->
+                    <div class="col-7">
+                        <h6 class="mt-0 font-small">
+                            <a>
+                                <strong>Title of the news</strong>
+                            </a>
+                        </h6>
+
+                        <div class="post-data">
+                            <p class="font-small grey-text mb-0">
+                                <i class="fa fa-clock-o"></i> 18/08/2017
+                            </p>
+                        </div>
+                    </div>
+                    <!--/ Excerpt -->
+                </div>
+                <!--/ Grid row -->
+            </div>
+
+            <div class="single-post">
+                <!-- Grid row -->
+                <div class="row mb-4">
+                    <div class="col-5">
+
+                        <!-- Image -->
+                        <div class="view overlay hm-white-slight">
+                            <img src="https://mdbootstrap.com/img/Photos/Others/photo15.jpg" class="img-fluid z-depth-1" alt="sample image">
+                            <a>
+                                <div class="mask waves-light waves-effect waves-light"></div>
+                            </a>
+                        </div>
+                    </div>
+
+                    <!-- Excerpt -->
+                    <div class="col-7">
+                        <h6 class="mt-0 font-small">
+                            <a>
+                                <strong>Title of the news</strong>
+                            </a>
+                        </h6>
+
+                        <div class="post-data">
+                            <p class="font-small grey-text mb-0">
+                                <i class="fa fa-clock-o"></i> 18/08/2017
+                            </p>
+                        </div>
+                    </div>
+                    <!--/ Excerpt -->
+                </div>
+                <!--/ Grid row -->
+            </div>
+
+            <div class="single-post">
+                <!-- Grid row -->
+                <div class="row mb-4">
+                    <div class="col-5">
+
+                        <!-- Image -->
+                        <div class="view overlay hm-white-slight">
+                            <img src="https://mdbootstrap.com/img/Photos/Others/photo9.jpg" class="img-fluid z-depth-1" alt="sample image">
+                            <a>
+                                <div class="mask waves-light waves-effect waves-light"></div>
+                            </a>
+                        </div>
+                    </div>
+
+                    <!-- Excerpt -->
+                    <div class="col-7">
+                        <h6 class="mt-0 font-small">
+                            <a>
+                                <strong>Title of the news</strong>
+                            </a>
+                        </h6>
+
+                        <div class="post-data">
+                            <p class="font-small grey-text mb-0">
+                                <i class="fa fa-clock-o"></i> 18/08/2017
+                            </p>
+                        </div>
+                    </div>
+                    <!--/ Excerpt -->
+                </div>
+                <!--/ Grid row -->
+
+            </div>
+        </div>
+    </section>
     <section>
 
         <!--Grid row-->
