--- a/BlogHealth/Views/Home/PartialMenu.cshtml
+++ b/BlogHealth/Views/Home/PartialMenu.cshtml
@@ -8,9 +8,8 @@
     {
         <li class="nav-item @(i==0?"active":"") ml-1">
           
-            <a class="nav-link " style="" href="#">@Model[i].Name</a>
+            <a class="nav-link " style="" href="#"><i class="fa fa-home"></i> @Model[i].Name</a>
 
-            
         </li>
     }
     else
