--- a/BlogHealth/AdminAsset/css/style.css
+++ b/BlogHealth/AdminAsset/css/style.css
@@ -210,3 +210,10 @@ body {
         padding-left: 0;
     }
 }
+
+#panelHot .list-group  li:hover{
+    /*background-color: #e53935;
+    color: #FFF;
+        box-shadow: 0 2px 5px 0 rgba(0,0,0,.16), 0 2px 10px 0 rgba(0,0,0,.12);*/
+   
+}
